--- a/app/HomePage.module.css
+++ b/app/HomePage.module.css
@@ -707,6 +707,7 @@
   position: relative;
   overflow: hidden;
   border-radius: 50px;
+  margin-top: 100px;
 
   /* Glass background (static) */
   backdrop-filter: blur(15px);
