--- a/app/hotels/HotelsPage.module.css
+++ b/app/hotels/HotelsPage.module.css
@@ -15,6 +15,7 @@
   padding: 4rem 2rem;
   text-align: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  margin-top: 64px;
 }
 
 .heroContent {
